# minwon-ocr

./: .gitignore  main.py  pyproject.toml  requirements.txt
core/: batch_processor.py  constants.py  data_model.py  image_aligner.py  image_loader.py  ocr_engine.py  profile_manager.py
ui/: components.py  editor_widget.py  info_page.py  main_window.py  ocr_runner.py  profile_dialog.py  profile_editor.py  verification_viewer.py
