[project]
name = "minwon-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyinstaller>=6.18.0",
    "pymupdf>=1.26.7",
    "pyside6>=6.10.2",
    "pytesseract>=0.3.13",
]
